cmake_minimum_required(VERSION 3.22)
project(dsa)

set(CMAKE_CXX_STANDARD 14)

add_executable(dsa main.cpp Vector.h Vector_realization.h Vector_partition.h ListNode.h List.h List_realization.h ListNode_insert.h List_reverse.h Stack.h Stack_application.cpp Stack_application.h Queue.h main_implementation.h BinNode.h BinNode_realization.h BinNode_macro.h BinTree.h BinTree_realization.h _share.h BinNode_travPreorder.h BinNode_travPostorder.h BinNode_travInorder.h BST.h BST_realization.h Graph.h GraphMatrix.h AVL.h AVL_marco.h AVL_realization.h Graph_bfs.h)
